{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "ShipControl",
            "id": "d652b6c1-5a87-4138-ac84-ff0f2603fd00",
            "actions": [
                {
                    "name": "Thrust",
                    "type": "PassThrough",
                    "id": "f53a7fa5-2ab4-4ea7-a26a-d765b644c2f9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pitch",
                    "type": "PassThrough",
                    "id": "8964a704-51cf-43d5-9c9b-faabc69bac33",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "PassThrough",
                    "id": "a86d3ec9-bba4-45b3-bbbb-6d6af56288fc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Yaw",
                    "type": "PassThrough",
                    "id": "92129503-aed3-4613-8fc7-0edeb85249f2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraLook",
                    "type": "PassThrough",
                    "id": "edc35362-c2c9-4ad8-ac0f-409138ad7bb6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleTargetingMode",
                    "type": "Button",
                    "id": "0cf14897-b0fe-44e1-92b2-1fb70e3cf406",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CycleTurretGroups",
                    "type": "Button",
                    "id": "351a557c-ffce-4efd-9c75-d6a6aa19a7b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockTarget",
                    "type": "Button",
                    "id": "93599924-5468-4350-9789-248dcdbb0dec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup1",
                    "type": "Button",
                    "id": "c81c6a6d-ef63-4d9c-9a08-ebe3c17b2aec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup2",
                    "type": "Button",
                    "id": "f44d8abf-a79d-4659-b7c6-dbe57ac1716c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup3",
                    "type": "Button",
                    "id": "9bdffeb2-aa52-4e30-afd9-22eedee1303c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup4",
                    "type": "Button",
                    "id": "0b699402-9729-43c2-b69b-c490b9a25405",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup5",
                    "type": "Button",
                    "id": "74d5763e-90ae-4898-94aa-b58001961f45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup6",
                    "type": "Button",
                    "id": "f88fd3d8-42b5-4682-b306-2df7a1b9d34b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup7",
                    "type": "Button",
                    "id": "51101dfe-3ff7-4a5d-8f40-4ff833ed0851",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup8",
                    "type": "Button",
                    "id": "e54ba271-bdb6-4d7f-870b-c9d7cb8937ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup9",
                    "type": "Button",
                    "id": "9810e345-fe0d-4fdb-9c07-51da968d4292",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectTurretGroup10",
                    "type": "Button",
                    "id": "8cc3327c-f74c-45d8-9a1a-07689cd027a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "958a9c03-1022-43e9-b9e5-e1770de62c09",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "aebb3a31-d7cd-44f4-b23c-49dfcb5167c1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ed1434db-760b-4ee9-b81f-227043cd9b9d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "99f00694-b2c7-42e7-9495-58d40c0d1271",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0b1c8ca9-ac13-424f-80e4-785f7bc3ae37",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4cbfea6e-816f-4a3b-8cc0-b748e68804de",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "bf455fc4-227a-478f-b3de-359a9588d18d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3d94bce1-ac53-44b2-9e46-611f6913db22",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "03fb0178-c3fb-402b-8100-bd02be624806",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "d74a3458-a692-4cb6-92af-848af1d078ce",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "87c7649b-8282-44b6-883e-0b4d36128ea9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "880e7398-13e9-48fb-ba6e-ae53a03fea2f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3ea7d445-0196-424b-826b-a25bbc2e9bd1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf30efec-5d35-49a4-adef-bdd75b892fb6",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleTargetingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30672735-2ea5-453b-a198-4983c4c9e2b0",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleTurretGroups",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06ef2936-6539-49c1-96d3-e2db7a2b77ed",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adf5fffd-c7cc-4c9b-a316-bfc5a20fd3c9",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a59b8e1-f89f-4245-acd5-1ae36e7fb87e",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6d39dde-fe56-49f1-9312-fdf62f8764b2",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ce35fb4-2166-46c8-a746-7890ae5e07bb",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e845b908-a2df-4625-b97f-38bfb03fa36f",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56b05255-1c1c-4221-aea5-4a6ca905ac2d",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30dd77f2-e250-4cf9-a54c-247a38b2757d",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f66e50f7-1325-4c74-9dfc-b3bdb63a8272",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15b84d73-6ff5-4902-8fd4-740abf47ada2",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94326a19-5336-45f5-b59c-a77c19c6c0a3",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTurretGroup10",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}